--- a/style.css
+++ b/style.css
@@ -2,29 +2,18 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* border: 2px solid rgba(99, 0, 174, 0.501); */
 }
 
 body {
   background-color: #274527;
 }
 
-.container {
+.containerPlay {
+  width: 1080px;
   display: flex;
-  flex-direction: column;
-  width: 950px;
   height: auto;
   margin: 40px auto;
-}
-
-.containerButtons {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.containerPlay {
-  width: 950px;
-  display: flex;
   justify-content: center;
   color: #e9e4c3;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -32,30 +21,30 @@ body {
   font-size: 18px;
 }
 
-.containerPlayer {
-  width: 450px;
-  height: 600px;
+.containerCards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 290px;
+}
+
+.containerAction {
+  width: 500px;
+  height: 700px;
   padding: 48px;
   border: 1px solid #a29f8e;
   border-radius: 30px;
 }
 
-.containerDealer {
-  width: 430px;
-  height: 600px;
-  padding: 48px 48px 48px 78px;
-  border-top: 1px solid #a29f8e;
-  border-right: 1px solid #a29f8e;
-  border-bottom: 1px solid #a29f8e;
-  border-top-right-radius: 30px;
-  border-bottom-right-radius: 30px;
-  margin-left: -30px;
+.containerButtons {
+  display: flex;
+  justify-content:space-between;
 }
 
 .containerInfo {
   background-color: rgba(162, 159, 142, 0.3);
-  max-width: 354px;
-  height: 120px;
+  max-width: 420px;
+  height: 200px;
   padding: 15px 5px;
   margin-top: 5px;
   margin-bottom: 45px;
@@ -82,7 +71,6 @@ button {
   font-weight: bold;
   border: none;
   border-radius: 8px;
-  margin: 0 55px;
   cursor: pointer;
 }
 
@@ -95,12 +83,13 @@ button {
   opacity: 1;
 }
 
-ul {
-  color: #c0bca7;
-  font-family:'Courier New', Courier, monospace;
-  font-size: 24px;
-  font-weight: bold;
-  text-shadow: 0 0 3px rgba(18, 9, 60, 0.5);
-  list-style: none;
-  margin: 0 20px;
+/* img {
+  height: 200px;
 }
+
+.card {
+  background-color: #f1edd5;
+  border-radius: 12px;
+  box-shadow: -2px 4px 6px rgba(31, 38, 113, 0.5);
+  margin-left: -85px;
+} */
