--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   background-color: rgba(162, 159, 142, 0.3);
   max-width: 420px;
   height: 200px;
-  padding: 15px 5px;
+  padding: 15px 10px 15px 30px;
   margin-top: 5px;
   margin-bottom: 45px;
   border-radius: 8px;
