--- a/style.css
+++ b/style.css
@@ -25,13 +25,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 290px;
+  width: 250px;
 }
 
 .containerAction {
   width: 500px;
   height: 700px;
   padding: 48px;
+  margin: 0 20px;
   border: 1px solid #a29f8e;
   border-radius: 30px;
 }
@@ -51,8 +52,7 @@ body {
   border-radius: 8px;
 }
 
-.info,
-.cards {
+.info {                 
   color: #fffdef;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 16px;
@@ -83,13 +83,22 @@ button {
   opacity: 1;
 }
 
-/* img {
+.imgCard {
   height: 200px;
-}
-
-.card {
   background-color: #f1edd5;
   border-radius: 12px;
-  box-shadow: -2px 4px 6px rgba(31, 38, 113, 0.5);
-  margin-left: -85px;
-} */
+  box-shadow: 0 0 12px rgba(31, 38, 113, 0.5);
+  margin-top: -100px;
+  margin-left: -48px;
+}
+
+.cardsPlayer,
+.cardsDealer {
+  display: flex;
+  flex-direction:row;
+  flex-wrap: wrap;
+  max-width: 220px;
+  width: 220px;
+  padding-top: 100px;
+  padding-left: 48px;
+}
