--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 250px;
+  padding-top: 48px;
 }
 
 .containerAction {
@@ -42,23 +43,37 @@ body {
   justify-content:space-between;
 }
 
-.containerInfo {
+#containerInfo {
   background-color: rgba(162, 159, 142, 0.3);
-  max-width: 420px;
-  height: 200px;
-  padding: 15px 10px 15px 30px;
+  max-width: 405px;
+  height: 240px;
+  padding: 30px 25px;
   margin-top: 5px;
   margin-bottom: 45px;
   border-radius: 8px;
+  transition: 0.6s ease-out;
+}
+
+.containerScore {
+  display: flex;
+  width: 140px;
+  margin-top: 20px;
+  margin-bottom: 15px;
 }
 
 .info {                 
   color: #fffdef;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 700;
   letter-spacing: 0.1em;
-  line-height: 1.5em;
+}
+
+.name {
+  font-family:'Courier New', Courier, monospace;
+  color: #fffdef;
+  font-size: 30px;
+  margin-bottom: 5px;
 }
 
 button {
