--- a/style.css
+++ b/style.css
@@ -15,10 +15,6 @@ body {
   height: auto;
   margin: 40px auto;
   justify-content: center;
-  color: #e9e4c3;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  letter-spacing: 0.15em;
-  font-size: 18px;
 }
 
 .containerCards {
@@ -72,28 +68,19 @@ body {
   margin-bottom: 15px;
 }
 
-.containerList {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 414px;
-}
-
-.containerBlJack {
-  width: 424px;
-  height: 200px;
-}
-
 .lifeList {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 14px;
-  line-height: 1em;
-  width: 175px;
+  font-size: 16px;
+  color: #e9e4c3;
+  letter-spacing: 0.05em;
+  width: 412px;
+  height: 100px;
   list-style: none;
+  margin-left: 2px;
 }
 
-.lifeList:last-child {
-  text-align: end;
+.lifeList.one {
+  margin-top: 30px;
 }
 
 .spanList {
@@ -107,29 +94,31 @@ body {
   align-items: center;
   z-index: 10;
   position: absolute;
-  background-color: #274527;
   font-family:'Courier New', Courier, monospace;
   color: rgba(162, 159, 142, 0.4);
+  background-color: #274527;
   font-size: 72px;
-  width: 424px;
+  padding: 0 15px 0 12px;
+  width: 412px;
   height: 200px;
   opacity: 1;
   transition: 0.8s ease-out;
 }
 
-.largeNr {
+.largeNr,
+.info {
   color: #fffdef;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 40px;
   font-weight: 700;
+}
+
+.largeNr {
+  font-size: 40px;
   padding: 0 10px;
 }
 
 .info {                 
-  color: #fffdef;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 20px;
-  font-weight: 700;
   letter-spacing: 0.1em;
 }
 
@@ -147,6 +136,13 @@ body {
   color: #fffdef;
   font-size: 30px;
   margin-top: 48px;
+}
+
+.smallSans {
+  color: #e9e4c3;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  letter-spacing: 0.15em;
+  font-size: 18px;
 }
 
 button {
